examples/invalid/06_bare_variant_identifier_pattern.lane
// invalid: bare variant-like identifiers in patterns are binders
module Examples.Invalid06

pub enum Option[A] {
  none()
  some(A)
}

pub fn unwrap_or(value : Option[Int], fallback : Int) -> Int {
  match value {
    none => fallback
    some(x) => x
  }
}
